src/lexer/snapshots/enderpy__lexer__lexer__tests__bytes-literals-2.snap
---
source: src/lexer/lexer.rs
description: "b\"\""
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b\"\"",
        ),
        start: 0,
        end: 3,
    },
]
