src/lexer/snapshots/enderpy__lexer__lexer__tests__bytes-literals-4.snap
---
source: src/lexer/lexer.rs
description: "b'hello'"
---
[
    Token {
        kind: Bytes,
        value: Str(
            "b'hello'",
        ),
        start: 0,
        end: 8,
    },
]
