src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-0.snap
---
source: src/lexer/lexer.rs
description: "f\"hello\""
---
[
    Token {
        kind: FString,
        value: Str(
            "f\"hello\"",
        ),
        start: 0,
        end: 8,
    },
]
