src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-1.snap
---
source: src/lexer/lexer.rs
description: "f\"world\""
---
[
    Token {
        kind: FString,
        value: Str(
            "f\"world\"",
        ),
        start: 0,
        end: 8,
    },
]
