src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-2.snap
---
source: src/lexer/lexer.rs
description: "f\"\""
---
[
    Token {
        kind: FString,
        value: Str(
            "f\"\"",
        ),
        start: 0,
        end: 3,
    },
]
