src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-3.snap
---
source: src/lexer/lexer.rs
description: "a = f\"hello\""
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
    Token {
        kind: Assign,
        value: None,
        start: 2,
        end: 3,
    },
    Token {
        kind: FString,
        value: Str(
            "f\"hello\"",
        ),
        start: 4,
        end: 12,
    },
]
