src/lexer/snapshots/enderpy__lexer__lexer__tests__f-string-literals-4.snap
---
source: src/lexer/lexer.rs
description: "f'hello_{var}'"
---
[
    Token {
        kind: FString,
        value: Str(
            "f'hello_{var}'",
        ),
        start: 0,
        end: 14,
    },
]
